# gaussdataflow

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
crates/gauss-cdk/: Cargo.toml
crates/gauss-cdk/src/: cli.rs  emitter.rs  lib.rs  state.rs
crates/gauss-cli/: Cargo.toml
crates/gauss-cli/src/: main.rs
crates/gauss-connector-runtime/: Cargo.toml
crates/gauss-connector-runtime/src/: error.rs  launcher.rs  lib.rs  process.rs  runner.rs
crates/gauss-declarative/: Cargo.toml
crates/gauss-declarative/src/: interpolate.rs  lib.rs  main.rs  manifest.rs
crates/gauss-declarative/tests/: engine.rs
crates/gauss-mcp/: Cargo.toml
crates/gauss-mcp/src/: lib.rs  main.rs  tools.rs
crates/gauss-mcp/tests/: gateway.rs
crates/gauss-mock-connector/: Cargo.toml
crates/gauss-mock-connector/src/: main.rs
crates/gauss-mock-connector/tests/: bench.rs  e2e.rs  sync.rs
crates/gauss-orchestrator/: Cargo.toml
crates/gauss-orchestrator/src/: executor.rs  lib.rs  scheduler.rs
crates/gauss-orchestrator/tests/: worker.rs
crates/gauss-protocol/: Cargo.toml
crates/gauss-protocol/src/: catalog.rs  lib.rs  message.rs  spec.rs  state.rs  trace.rs
crates/gauss-protocol/tests/: roundtrip.rs
crates/gauss-secrets/: Cargo.toml
crates/gauss-secrets/src/: lib.rs  vault.rs
crates/gauss-secrets/tests/: envelope.rs  vault.rs
crates/gauss-server/: Cargo.toml
crates/gauss-server/seed/: registry.json
crates/gauss-server/src/: auth.rs  import.rs  lib.rs  main.rs  registry.rs  state.rs
crates/gauss-server/src/api/: actors.rs  connections.rs  definitions.rs  error.rs  governance.rs  jobs.rs  mod.rs  oauth.rs  workspaces.rs
crates/gauss-server/tests/: api.rs  governance.rs
crates/gauss-store/: Cargo.toml
crates/gauss-store/migrations/: 0001_initial.sql  0002_orchestration.sql  0003_governance.sql  0004_observability_indexes.sql
crates/gauss-store/src/: error.rs  lib.rs  models.rs  secrets_backend.rs
crates/gauss-store/src/repo/: actors.rs  connections.rs  definitions.rs  governance.rs  jobs.rs  mod.rs  states.rs  workspaces.rs
crates/gauss-sync/: Cargo.toml
crates/gauss-sync/src/: lib.rs
crates/gauss-tui/: Cargo.toml
crates/gauss-tui/src/: api.rs  app.rs  fetch.rs  main.rs  ui.rs
docs/: ARCHITECTURE.md  ROADMAP.md  STRATEGY.md
web/: package-lock.json  package.json
web/app/: globals.css  layout.tsx  page.tsx
web/app/connections/[id]/: page.tsx
web/app/roadmap/: page.tsx
web/app/workspaces/[id]/: page.tsx
web/app/workspaces/[id]/new-connection/: page.tsx
web/app/workspaces/[id]/new/[kind]/: page.tsx
web/components/: SchemaForm.tsx  ui.tsx
web/lib/: api.ts
