[workspace]
resolver = "2"
members = [
    "crates/gauss-protocol",
    "crates/gauss-connector-runtime",
    "crates/gauss-cli",
    "crates/gauss-mock-connector",
    "crates/gauss-cdk",
    "crates/gauss-declarative",
    "crates/gauss-secrets",
    "crates/gauss-store",
    "crates/gauss-server",
    "crates/gauss-mcp",
    "crates/gauss-sync",
    "crates/gauss-orchestrator",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/rismanmattotorang/gaussdataflow"

[workspace.dependencies]
gauss-protocol = { path = "crates/gauss-protocol" }
gauss-cdk = { path = "crates/gauss-cdk" }
gauss-connector-runtime = { path = "crates/gauss-connector-runtime" }
gauss-secrets = { path = "crates/gauss-secrets" }
gauss-store = { path = "crates/gauss-store" }
gauss-sync = { path = "crates/gauss-sync" }
gauss-orchestrator = { path = "crates/gauss-orchestrator" }

anyhow = "1"
async-trait = "0.1"
axum = "0.8"
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive", "env"] }
cron = "0.12"
http-body-util = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
sqlx = { version = "0.8", default-features = false, features = [
    "runtime-tokio",
    "postgres",
    "uuid",
    "chrono",
    "json",
    "migrate",
    "macros",
] }
tempfile = "3"
thiserror = "2"
tower = { version = "0.5", features = ["util"] }
tower-http = { version = "0.6", features = ["trace", "cors"] }
uuid = { version = "1", features = ["serde", "v4"] }
tokio = { version = "1", features = [
    "macros",
    "process",
    "io-util",
    "io-std",
    "rt-multi-thread",
    "fs",
    "time",
    "sync",
] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
