[package]
name = "gauss-cdk"
description = "Connector Development Kit: build protocol-complete sources and destinations in Rust"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
async-trait = { workspace = true }
clap = { workspace = true }
gauss-protocol = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
