[package]
name = "gauss-connector-runtime"
description = "Launches Airbyte-protocol connectors (Docker or local process) and streams typed messages"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
gauss-protocol = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
