[package]
name = "gauss-declarative"
description = "Low-code connector engine: runs declarative YAML/JSON manifests as native sources, no containers"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "gauss-declarative"
path = "src/main.rs"

[dependencies]
async-trait = { workspace = true }
base64 = { workspace = true }
gauss-cdk = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }

[dev-dependencies]
axum = { workspace = true }
gauss-connector-runtime = { workspace = true }
tempfile = { workspace = true }
