[package]
name = "gauss-mcp"
description = "MCP gateway: exposes the gaussdataflow control plane as Model Context Protocol tools for AI agents"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "gauss-mcp"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
gauss-connector-runtime = { workspace = true }
gauss-secrets = { workspace = true }
gauss-store = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tempfile = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
sqlx = { workspace = true }
