[package]
name = "gauss-orchestrator"
description = "Postgres-backed job orchestration: queue, worker loop, retries, schedules, cancellation"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
chrono = { workspace = true }
cron = { workspace = true }
gauss-connector-runtime = { workspace = true }
gauss-secrets = { workspace = true }
gauss-store = { workspace = true }
gauss-sync = { workspace = true }
reqwest = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
axum = { workspace = true }
sqlx = { workspace = true }
tempfile = { workspace = true }
