[package]
name = "gauss-secrets"
description = "Secret envelope: splits connector configs into redacted config + secret values, per the connector spec"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
async-trait = { workspace = true }
reqwest = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
axum = { workspace = true }
