[package]
name = "gauss-server"
description = "gaussdataflow config API server (axum): workspaces, connector registry, sources, destinations, connections"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "gauss-server"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
axum = { workspace = true }
clap = { workspace = true }
gauss-connector-runtime = { workspace = true }
gauss-orchestrator = { workspace = true }
gauss-protocol = { workspace = true }
gauss-secrets = { workspace = true }
gauss-store = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tempfile = { workspace = true }
tokio = { workspace = true }
tower-http = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
http-body-util = { workspace = true }
sqlx = { workspace = true }
tower = { workspace = true }
