[package]
name = "gauss-store"
description = "Postgres persistence for gaussdataflow: workspaces, connector registry, actors, connections, jobs"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
async-trait = { workspace = true }
chrono = { workspace = true }
gauss-secrets = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sqlx = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
