[package]
name = "gauss-sync"
description = "Replication worker: pipes a source connector into a destination connector with state checkpointing"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
gauss-connector-runtime = { workspace = true }
gauss-protocol = { workspace = true }
serde_json = { workspace = true }
tempfile = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
