[package]
name = "gauss-tui"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Interactive Ratatui terminal console for the Gauss-DataFlow control plane"

[[bin]]
name = "gauss-tui"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
chrono = { workspace = true }
clap = { workspace = true }
ratatui = "0.30"
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
uuid = { workspace = true }
